[gd_scene load_steps=11 format=2]

[ext_resource path="res://player.tscn" type="PackedScene" id=1]
[ext_resource path="res://DirectionalLight.gd" type="Script" id=2]
[ext_resource path="res://rooms/room0.tscn" type="PackedScene" id=3]
[ext_resource path="res://world.gd" type="Script" id=4]
[ext_resource path="res://Camera.tscn" type="PackedScene" id=5]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 24, 192, 12 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 48, 384, 24 )

[sub_resource type="SpatialMaterial" id=3]

[sub_resource type="BoxShape" id=4]
extents = Vector3( 24, 0.25, 24 )

[sub_resource type="CubeMesh" id=5]
size = Vector3( 48, 0.5, 48 )

[node name="world" type="Spatial"]
script = ExtResource( 4 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 14.0
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="room" parent="." instance=ExtResource( 3 )]

[node name="Camera" parent="." instance=ExtResource( 5 )]

[node name="wall1" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -168, -18 )

[node name="CollisionShape" type="CollisionShape" parent="wall1"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="wall1"]
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="wall2" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -168, 18 )

[node name="CollisionShape" type="CollisionShape" parent="wall2"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="wall2"]
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="wall3" type="StaticBody" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 23.5, -168, 0 )

[node name="CollisionShape" type="CollisionShape" parent="wall3"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="wall3"]
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="wall4" type="StaticBody" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -23.5, -168, 0 )

[node name="CollisionShape" type="CollisionShape" parent="wall4"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="wall4"]
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="light" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 20.8129, 0 )
light_color = Color( 1, 0, 0, 1 )
light_energy = 0.77
light_specular = 0.56
shadow_enabled = true
omni_range = 34.4
omni_shadow_mode = 0
script = ExtResource( 2 )

[node name="player" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4 )

[node name="platform" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 21.9, 0 )

[node name="CollisionShape" type="CollisionShape" parent="platform"]
shape = SubResource( 4 )

[node name="MeshInstance" type="MeshInstance" parent="platform"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00620651, 0.0263596, -0.0141344 )
mesh = SubResource( 5 )
material/0 = SubResource( 3 )

[connection signal="die" from="player" to="." method="_on_player_die"]
[connection signal="exit_room" from="player" to="." method="_on_player_exit_room"]
